# wingpanel-indicator-xrdesktop

./: README.md  meson.build
data/: gresource.xml  gschema.xml  indicator.css  meson.build  xrdesktop.appdata.xml.in
data/xrdesktopservice/: io.elementary.pantheon.XRDesktopService.xml  meson.build
data/xrservice/: io.elementary.pantheon.XRService.xml  meson.build
src/: Indicator.vala
src/Services/: DBusService.vala  Manager.vala  XRDesktopService.vala  XRService.vala
src/Widgets/: DisplayWidget.vala  PopoverWidget.vala
